# symmath

./: .travis.yml  CONTRIBUTORS  LICENSE  README.mkd  Symmath.hs  Terms.hs  symmath.cabal
Symmath/: Assoc.hs  Constants.hs  Derivate.hs  Eval.hs  Functiontable.hs  NumericIntegration.hs  Parse.hs  RPNParse.hs  Simplify.hs  TermToTex.hs  Terms.hs  UPNParse.hs  Util.hs
Test/: Makefile  TestSimplify.hs  TestSimplifyManual.hs  TestSymmath.hs
